set(RETAIL_DATA_FILES
        # gamedata
        gamedata/cards.ini
        gamedata/fleets.ini
        gamedata/hulls.ini
        gamedata/items.ini
        gamedata/jobs.ini
        gamedata/names.ini
        gamedata/planets.ini
        gamedata/races.ini
        gamedata/ships.ini
        gamedata/strings.ini
        gamedata/systems.ini
        gamedata/weapons.ini
        # static images and fonts
        graphics/backgrnd.pcx
        graphics/cheapass.pcx
        graphics/colormap.dat
        graphics/combtbg1.pcx
        graphics/combtbg2.pcx
        graphics/credits1.pcx
        graphics/credits2.pcx
        graphics/credits3.pcx
        graphics/digieel.pcx
        graphics/fnt2.pcx
        graphics/fnt3.pcx
        graphics/help.pcx
        graphics/helpc.pcx
        graphics/palette.dat
        graphics/starback.pcx
        graphics/titback.pcx
        graphics/title.pcx
        # sprites
        graphics/explode1.spr
        graphics/ifarrows.spr
        graphics/ifborder.spr
        graphics/ifbutton.spr
        graphics/ifdifneb.spr
        graphics/ifdifnmy.spr
        graphics/ifslider.spr
        graphics/ifsystem.spr
        graphics/iftarget.spr
        graphics/shield.spr
        graphics/ships.spr
        graphics/shipsilu.spr
        graphics/shockwav.spr
        graphics/smnebula.spr
        graphics/smplanet.spr
        graphics/smplnet2.spr
        graphics/smraces.spr
        graphics/smstars.spr
        graphics/smstars2.spr
        graphics/titles.spr
        graphics/weapons.spr
        # Sounds and Music
        sounds/alien1.wav
        sounds/alien2.wav
        sounds/alien3.wav
        sounds/arrive02.wav
        sounds/beep_accept.wav
        sounds/beep_decline.wav
        sounds/beep_deselect.wav
        sounds/beep_dot.wav
        sounds/beep_dot2.wav
        sounds/beep_info.wav
        sounds/beep_no.wav
        sounds/beep_select.wav
        sounds/beep_selectstar.wav
        sounds/beep_selship.wav
        sounds/beep_wait.wav
        sounds/beep_yes.wav
        sounds/blakhol2.wav
        sounds/blakhole.wav
        sounds/bridge_loop.wav
        sounds/cards/ally.wav
        sounds/cards/bauble.wav
        sounds/cards/brass.wav
        sounds/cards/cenotaph.wav
        sounds/cards/codex.wav
        sounds/cards/conograph_loop.wav
        sounds/cards/conograph_use.wav
        sounds/cards/cube_loop.wav
        sounds/cards/device.wav
        sounds/cards/drive_loop.wav
        sounds/cards/flare_loop.wav
        sounds/cards/gas_loop.wav
        sounds/cards/gong.wav
        sounds/cards/horloge_loop.wav
        sounds/cards/hulk_loop.wav
        sounds/cards/intruder_loop.wav
        sounds/cards/lifeform.wav
        sounds/cards/mantle.wav
        sounds/cards/mirror.wav
        sounds/cards/mirror_use.wav
        sounds/cards/monocle.wav
        sounds/cards/monolith.wav
        sounds/cards/mummy.wav
        sounds/cards/no_planet.wav
        sounds/cards/nova_loop.wav
        sounds/cards/plastic.wav
        sounds/cards/platinum.wav
        sounds/cards/sculpture.wav
        sounds/cards/system_loop.wav
        sounds/cards/titanium.wav
        sounds/cards/torc.wav
        sounds/cards/toy.wav
        sounds/cards/weapon.wav
        sounds/cards/whales.wav
        sounds/cards/whistle.wav
        sounds/cash02.wav
        sounds/collapse.wav
        sounds/combat/beam1.wav
        sounds/combat/beam2.wav
        sounds/combat/beam3.wav
        sounds/combat/beam4.wav
        sounds/combat/beam5.wav
        sounds/combat/beam6.wav
        sounds/combat/beam7.wav
        sounds/combat/boardship.wav
        sounds/combat/bulhit02.wav
        sounds/combat/cloak_in.wav
        sounds/combat/cloak_out.wav
        sounds/combat/explo01.wav
        sounds/combat/explo02.wav
        sounds/combat/fieryfury.wav
        sounds/combat/fighter.wav
        sounds/combat/lowboom.wav
        sounds/combat/misl1.wav
        sounds/combat/misl3.wav
        sounds/combat/pgun1.wav
        sounds/combat/pgun2.wav
        sounds/combat/pgun3.wav
        sounds/combat/pgun4.wav
        sounds/combat/pgun5.wav
        sounds/combat/pgun6.wav
        sounds/combat/plashit01.wav
        sounds/combat/shield02.wav
        sounds/combat/sim_end.wav
        sounds/combat/sys_dmg.wav
        sounds/combat/sys_fixed.wav
        sounds/combat/sys_hit.wav
        sounds/combat/sys_hit_2.wav
        sounds/combat/teleport.wav
        sounds/depart02.wav
        sounds/foldmove.wav
        sounds/fomax_bye.wav
        sounds/fomax_hi.wav
        sounds/fomax_wish.wav
        sounds/hyperdrv.wav
        sounds/install.wav
        sounds/install2.wav
        sounds/lock.wav
        sounds/logo.wav
        sounds/message.wav
        sounds/message2.wav
        sounds/music/combat.wav
        sounds/music/death.wav
        sounds/music/hiscore.wav
        sounds/music/nebula.wav
        sounds/music/rock.wav
        sounds/music/simulator.wav
        sounds/music/splash.wav
        sounds/music/start.wav
        sounds/music/theme.wav
        sounds/music/title.wav
        sounds/music/victory.wav
        sounds/opticals.wav
        sounds/pay_loop.wav
        sounds/probe_d.wav
        sounds/probe_l.wav
        sounds/races/garthan.wav
        sounds/races/kawangi.wav
        sounds/races/klakar.wav
        sounds/races/muktian.wav
        sounds/races/tanru.wav
        sounds/races/urluquai.wav
        sounds/races/zorg.wav
        sounds/radar1.wav
        sounds/scan_loop.wav
        sounds/swut.wav
        sounds/timer.wav
        sounds/titzap01.wav
        sounds/titzap02.wav
        sounds/trade01.wav
        sounds/warning.wav
        )
add_custom_target(retail_data ALL DEPENDS saisdata.zip)
add_custom_command(OUTPUT saisdata.zip
        COMMAND  ${CMAKE_COMMAND} -E tar cvf ${CMAKE_CURRENT_BINARY_DIR}/saisdata.zip --format=zip -- ${RETAIL_DATA_FILES}
        COMMENT "Building Retail Data File"
        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/saisdata.zip DESTINATION sais_full)